chore(bazel): record phase 1 delivery plan
Capture the accepted Bazel Phase 1 requirements, implementation plan, task board, compatibility matrix, and test strategy before starting code changes.

Also remove the disabled Travis CI configuration and Travis-specific build/docs references so new CI work can target GitHub Actions and the Bazel tools/check.sh path.